Added join_ducks task.
