# cmd/santa-sleigh/api/swagger.yaml
@@ -167,6 +167,7 @@ definitions:
     - join_freedogs
     - join_athene
     - join_kolo
+    - join_ducks
     - watch_video_with_code_confirmation_1
     - invite_friends_5
     - invite_friends_10
@@ -259,6 +260,7 @@ definitions:
     - JoinFreedogsType
     - JoinAtheneType
     - JoinKoloType
+    - JoinDucksType
     - WatchVideoWithCodeConfirmation1Type
     - InviteFriends5Type
     - InviteFriends10Type
@@ -591,6 +593,7 @@ paths:
         - join_freedogs
         - join_athene
         - join_kolo
+        - join_ducks
         in: path
         name: taskType
         required: true
@@ -806,6 +809,7 @@ paths:
         - join_freedogs
         - join_athene
         - join_kolo
+        - join_ducks
         in: path
         name: taskType
         required: true
